--- a/api/Makefile
+++ b/api/Makefile
@@ -2,4 +2,4 @@ build:
 	go build
 
 test:
-	go test -race -test.run=. -test.bench=. -test.benchmem=true
+	go test -v -race -test.run=. -test.bench=. -test.benchmem=true
