--- a/reports/Makefile
+++ b/reports/Makefile
@@ -2,5 +2,5 @@ build:
 	go build
 
 test:
-	go test -race -test.run=. -test.bench=. -test.benchmem=true
+	go test -v -race -test.run=. -test.bench=. -test.benchmem=true
 
