--- a/testdata/Makefile
+++ b/testdata/Makefile
@@ -2,4 +2,9 @@ build:
 	go build
 
 test:
-	go test -v -race -test.run=. -test.bench=. -test.benchmem=true
+	go test -race -test.run=. -test.bench=. -test.benchmem=true
+
+coverage:
+	go test -coverprofile=coverage.out
+	go tool cover -html=coverage.out
+	rm -rf coverage.out
